--- a/STC510_M3_Basics_Project.ipynb
+++ b/STC510_M3_Basics_Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "STC510 - M3 Basics Project.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM2LmU/ylBRkv6JHBqw1/Lp",
+      "authorship_tag": "ABX9TyNO3begCZgQJi+txYJMEupz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\"We want to know where different kinds of crimes are occurring, in which areas crime is growing fastest (or dropping fastest), and whether certain crimes are more common in certain areas of the city. Basically, we don't need maps or anything at this stage, just some data grouped by location (either the type of location or the zip codes) and some trend data.\""
+        "\"We want to know where different kinds of crimes are occurring, in which areas crime is growing fastest (or dropping fastest), and whether certain crimes are more common in certain areas of the city. Basically, we don't need maps or anything at this stage, just some data grouped by location (either the type of location or the zip codes) and some trend data.\"\n",
+        "\n",
+        "Group by zipcode, add new column for violent or non-violent crime, maybe use regex to search by month, plot the counts over time."
       ],
       "metadata": {
         "id": "OwBdYXb-fngt"
@@ -38,22 +40,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 46,
       "metadata": {
+        "id": "FYaMi5Yedqx0"
+      },
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "import csv\n",
+        "crimes = pd.read_csv('crimestat (1).csv',quoting=csv.QUOTE_NONE)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "crimes"
+      ],
+      "metadata": {
+        "id": "PwmnKWZ6uH-c",
+        "outputId": "acd198dc-bf99-425e-dbf8-b4d72819fc60",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        },
-        "id": "FYaMi5Yedqx0",
-        "outputId": "4509b123-11c0-483e-b101-b12dbfa12737"
+        }
       },
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-2a1bfbe4-990d-4a75-bf6f-ef5635163100\">\n",
+              "  <div id=\"df-17eab807-2a0a-4dd2-a336-7f3f551851b5\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -197,7 +215,7 @@
               "</table>\n",
               "<p>131677 rows × 7 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2a1bfbe4-990d-4a75-bf6f-ef5635163100')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-17eab807-2a0a-4dd2-a336-7f3f551851b5')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -248,12 +266,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2a1bfbe4-990d-4a75-bf6f-ef5635163100 button.colab-df-convert');\n",
+              "          document.querySelector('#df-17eab807-2a0a-4dd2-a336-7f3f551851b5 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2a1bfbe4-990d-4a75-bf6f-ef5635163100');\n",
+              "          const element = document.querySelector('#df-17eab807-2a0a-4dd2-a336-7f3f551851b5');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -292,15 +310,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 47
         }
-      ],
-      "source": [
-        "import pandas as pd\n",
-        "import csv\n",
-        "crimes = pd.read_csv('crimestat (1).csv',quoting=csv.QUOTE_NONE)\n",
-        "crimes"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "crime_by_zip = crimes.groupby('\"ZIP\"')"
+      ],
+      "metadata": {
+        "id": "gPMwcnPVmOyT"
+      },
+      "execution_count": 48,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -308,10 +331,23 @@
         ""
       ],
       "metadata": {
-        "id": "gPMwcnPVmOyT"
+        "id": "lZ6SDv22qYve",
+        "outputId": "6f49bb13-071d-423e-f653-3f25ba1f28b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nothing specified, nothing added.\n",
+            "Maybe you wanted to say 'git add .'?\n"
+          ]
+        }
+      ]
     }
   ]
 }
